Initially make the product management icon description not visible to ensure jquery toggle functionality between the icon and description works

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,6 @@ font-family: 'PT Sans Narrow', sans-serif;
 .developmentdescription {
   display: none;
 }
+.managementdescription {
+  display: none;
+}
